<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txtTituloDialogInfo"
        android:fontFamily="sans-serif-black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/abaut_us_txttitulo"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="15dp"
        android:textSize="22dp" />

    <TextView
        android:id="@+id/editTextGastoMensual"
        android:layout_gravity="center_vertical|end"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:textSize="18dp"
        android:ems="10"
        android:text="@string/abaut_us_txt"/>


    <TextView
        android:id="@+id/editTextGastoAnual"
        android:layout_gravity="center_vertical|end"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:textSize="18dp"
        android:ems="10"
        android:text="@string/abaut_us_txt2"/>

    <TextView
        android:id="@+id/textViewTitulo2"
        android:fontFamily="sans-serif-black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/abaut_us_txttitulo2"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="15dp"
        android:textSize="22dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/abaut_us_txtciclo" />
    <TextView
        android:id="@+id/textViewAsignatura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:text="@string/abaut_us_txtasignatura" />
    <TextView
        android:id="@+id/textViewDesarrollador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:text="@string/abaut_us_desarrollador" />

    <Button
        android:id="@+id/buttonVolver"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginRight="30dp"
        android:textSize="18dp"
        android:layout_marginTop="15dp"
        android:text="@string/dialog_vehicle_buttonVolver" />

</LinearLayout>