<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txtTituloDialog"
        android:fontFamily="sans-serif-black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="15dp"
        android:textSize="22dp" />

    <TextView
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="5dp"
        android:textSize="18dp"
        android:ems="10"
        android:text="@string/dialog_vehicle_to_pass_itv_txt1"/>


    <TextView
        android:id="@+id/editTextFecha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="5dp"
        android:textSize="18dp"
        android:ems="10"
        android:text="@string/dialog_vehicle_to_pass_itv_txt_fecha"/>

    <Button
        android:id="@+id/buttonVolver"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginRight="30dp"
        android:textSize="18dp"
        android:layout_marginTop="15dp"
        android:text="@string/dialog_vehicle_buttonVolver" />

</LinearLayout>