<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="50dp"
    tools:context=".Activities.EditFuelActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="30dp">

        <TextView
            android:id="@+id/textViewFecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:textSize="18sp"
            android:text="@string/activity_Add_fuel_fecha" />

        <EditText
            android:id="@+id/editTextFecha"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:clickable="true"
            android:focusable="false"
            android:inputType="date"
            android:layout_marginBottom="20dp"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="30dp">

        <TextView
            android:id="@+id/textViewCuantia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:textSize="18sp"
            android:text="@string/activity_Add_fuel_Cuantia" />
        <EditText
            android:id="@+id/editTextCuantia"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="30dp"
            android:inputType="number"
            android:layout_marginBottom="20dp"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="30dp">

        <TextView
            android:id="@+id/textViewLitros"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:textSize="18sp"
            android:text="@string/activity_Add_fuel_Litros" />

        <EditText
            android:id="@+id/editTextLitros"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="30dp"
            android:inputType="number"
            android:layout_marginBottom="20dp"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="30dp">

        <TextView
            android:id="@+id/textViewKilometros"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:textSize="18sp"
            android:text="@string/activity_Add_fuel_Kilometros" />
        <EditText
            android:id="@+id/editTextKilometros"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="30dp"
            android:inputType="number"
            android:layout_marginBottom="20dp"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="30dp">

        <TextView
            android:id="@+id/textViewConsumoMedioAnterior"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:textSize="18sp"
            android:text="@string/activity_Add_fuel_consumo_medio_anterior" />
        <EditText
            android:id="@+id/editTextConsumoMedioAnterior"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="30dp"
            android:inputType="number"
            android:layout_marginBottom="20dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:gravity="center|bottom"
        android:orientation="vertical" >

        <Button
            android:id="@+id/buttonCreate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:backgroundTint="@color/design_default_color_primary"
            android:foregroundGravity="bottom"
            android:text="@string/edit_fuel_ativity_title"
            android:textColor="@android:color/background_light"
            android:textSize="18sp" />
    </LinearLayout>
</LinearLayout>